# har-system-edge-app

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  requirements.txt  setup_env.sh
HAR-System/: .gitignore  README.md  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt  setup.py
HAR-System/config/: default.yaml
HAR-System/examples/: demo_temporal_tracking.py  test_har_tracker.py
HAR-System/har_system/: __init__.py  __main__.py
HAR-System/har_system/apps/: __init__.py  chokepoint_analyzer.py  manage_faces.py  realtime_pose.py  train_faces.py
HAR-System/har_system/core/: __init__.py  callbacks.py  face_identity_manager.py  face_processor.py  tracker.py
HAR-System/har_system/integrations/: __init__.py  hailo_face_recognition.py
HAR-System/har_system/utils/: __init__.py  cli.py  overlay.py
HAR-System/scripts/: run_chokepoint_analysis.sh  run_examples.sh  run_performance_mode.sh  run_tests.sh  run_with_camera.sh  test_performance.sh  train_faces_auto.sh
HAR-System/tests/: conftest.py
HAR-System/tests/component/: test_callbacks_extractors.py  test_manage_faces_operations.py  test_train_faces_validation.py
HAR-System/tests/unit/: test_cli.py  test_face_identity_manager.py  test_face_processor.py  test_hailo_integration.py  test_main_dispatcher.py  test_overlay.py  test_tracker.py
database/persons.db/persons.lance/_transactions/: 0-59868845-76e4-40d3-a86f-79e22a6905e7.txn  (+4 more)
gstshark_2026-01-10_00:51:55/: datastream
hailo_apps/config/: config.yaml  config_manager.py
scripts/: cleanup_installation.sh  hailo_installer.sh
(+25 files in other folders)
